# Projet6

./: .gitignore  README.md  credit_scoring.ipynb  fine_tuning.ipynb  mlflow.db  model_testing.ipynb  preprocessingFiles.ipynb  preprocessing_baseline_model.ipynb  pyproject.toml
